# mugiwara

./: .commit_msg.txt  .gitignore  .pre-commit-config.yaml  COMMIT_FINAL.txt  CORRECTIF_ROTATION.md  CYCLE_BASE.md  OPTIMISATIONS.md  README.md  RUN_GAME.bat  STRATEGIE.md  STRATEGIE_COMPETITIVE.md  STRATEGIE_FINALE.md  lancer_4clients.ps1  lancer_5clients.ps1  lancer_tests.ps1  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test_simple.bat  test_strategy_live.ps1
.github/workflows/: ci.yml
chronobio_client/: __init__.py  __main__.py  actions.py  client.py  game_state.py  strategy.py
tests/: README.md  __init__.py  test_actions.py  test_client.py  test_game_state.py  test_main.py  test_strategy.py
