[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chronobio-client-mugiwara"
version = "1.0.0"
description = "Client Chronobio - Stratégie optimale de production de soupes bio"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Équipe Mugiwara"}
]
dependencies = [
    "chronobio",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "coverage>=7.3.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
]

# Configuration pytest
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--cov=chronobio_client",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--strict-markers",
    "-ra",
    "--tb=short",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Configuration coverage
[tool.coverage.run]
source = ["chronobio_client"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/client.py",  # Nécessite connexion serveur (difficile à mocker)
    "*/strategy.py",  # Non utilisé dans le projet
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# Configuration Ruff
[tool.ruff]
target-version = "py311"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (géré par formatter)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # Allow raising exceptions without from e
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "S101"]  # Allow assert and unused args in tests
"chronobio_client/strategy.py" = ["ARG", "W293"]  # Non utilisé - ignorer warnings
"setup.py" = ["SIM115"]  # Ignorer l'erreur de context manager dans setup.py

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# Configuration mypy
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Mettre à true progressivement
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = "chronobio.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
